# imgui-config-window

./: CMakeLists.txt  LICENSE.txt  README.md  conanfile.py  dockerfile
cmake/: conan_config.cmake
include/: config_window.h
src/: config_window.cpp
test_package/: CMakeLists.txt  conanfile.py  config.proto  test.cpp
